; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/common/extr_drm_common.c_drm_restore_crtc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/common/extr_drm_common.c_drm_restore_crtc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@g_orig_crtc = common dso_local global %struct.TYPE_3__* null, align 8
@g_drm_fd = common dso_local global i32 0, align 4
@g_connector_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_restore_crtc() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %2 = icmp ne %struct.TYPE_3__* %1, null
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %23

4:                                                ; preds = %0
  %5 = load i32, i32* @g_drm_fd, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 4
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = call i32 @drmModeSetCrtc(i32 %5, i32 %8, i32 %11, i32 %14, i32 %17, i32* @g_connector_id, i32 1, i32* %19)
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_orig_crtc, align 8
  %22 = call i32 @drmModeFreeCrtc(%struct.TYPE_3__* %21)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @g_orig_crtc, align 8
  br label %23

23:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @drmModeSetCrtc(i32, i32, i32, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @drmModeFreeCrtc(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
